--- a/src/views/create-user.ejs
+++ b/src/views/create-user.ejs
@@ -14,10 +14,7 @@
 </head>
 
 <body>
-    <h1>hello ejs HungDev hihi</h1>
-    <!-- <img src="/images/hình nền.jpg" alt=""> -->
-    <a href="/create-user" class="btn btn-warning">create a new User</a>
-
+    create user HungDev
 </body>
 
 </html>
