--- a/src/views/create-user.ejs
+++ b/src/views/create-user.ejs
@@ -14,7 +14,33 @@
 </head>
 
 <body>
-    create user HungDev
+
+    <div style="width: 600px; margin: auto;">
+        <h3 style="padding: 10px 0px;">Create a user</h3>
+
+        <form action="/handle-create-user" method="post">
+            <div class="mb-3">
+                <label class="form-label">Name: </label>
+                <input type="text" class="form-control"></input>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Email: </label>
+                <input type="email" class="form-control" placeholder="name@example.com">
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Address: </label>
+                <textarea class="form-control" rows="3"></textarea>
+            </div>
+
+            <div class="mb-3">
+                <button type="submit" class="btn btn-warning">Submit</button>
+            </div>
+        </form>
+
+    </div>
+
 </body>
 
 </html>
