--- a/src/views/create-user.ejs
+++ b/src/views/create-user.ejs
@@ -21,17 +21,17 @@
         <form action="/handle-create-user" method="post">
             <div class="mb-3">
                 <label class="form-label">Name: </label>
-                <input type="text" class="form-control"></input>
+                <input type="text" name="fullName" class="form-control"></input>
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Email: </label>
-                <input type="email" class="form-control" placeholder="name@example.com">
+                <input type="email" name="email" class="form-control" placeholder="name@example.com">
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Address: </label>
-                <textarea class="form-control" rows="3"></textarea>
+                <textarea class="form-control" name="address" rows="3"></textarea>
             </div>
 
             <div class="mb-3">
