--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -49,7 +49,14 @@
                                 <%= user.address %>
                             </td>
                             <td>
-                                <button class="btn btn-danger">Delete</button>
+                                <div style="display: flex; gap: 10px;">
+                                    <form action="/handle-view-user/<%= user.id %>" method="post">
+                                        <button class="btn btn-warning">View</button>
+                                    </form>
+                                    <form action="/handle-delete-user/<%= user.id %>" method="post">
+                                        <button class="btn btn-danger">Delete</button>
+                                    </form>
+                                </div>
                             </td>
 
                         </tr>
