--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -50,7 +50,7 @@
                             </td>
                             <td>
                                 <div style="display: flex; gap: 10px;">
-                                    <form action="/handle-view-user/<%= user.id %>" method="post">
+                                    <form action="/handle-view-user/<%= user.id %>" method="get">
                                         <button class="btn btn-warning">View</button>
                                     </form>
                                     <form action="/handle-delete-user/<%= user.id %>" method="post">
