--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -40,10 +40,10 @@
                                 <%= user.id %>
                             </td>
                             <td>
-                                <%= user.name %>
+                                <%= user.fullName %>
                             </td>
                             <td>
-                                <%= user.email %>
+                                <%= user.username %>
                             </td>
                             <td>
                                 <%= user.address %>
