--- a/src/views/admin/user/show.ejs
+++ b/src/views/admin/user/show.ejs
@@ -8,7 +8,6 @@
     <meta name="description" content="Hỏi Dân IT - Dự án laptopshop" />
     <meta name="author" content="Hỏi Dân IT" />
     <title>Manager User - Hỏi Dân IT</title>
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="/admin/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -22,7 +21,64 @@
             <%- include('../layout/sidenav.ejs'); %>
                 <div id="layoutSidenav_content">
                     <main>
-                        Manager User
+                        <div class="container-fluid px-4">
+                            <h1 class="mt-4">Manager User</h1>
+                            <ol class="breadcrumb mb-4">
+                                <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
+                                <li class="breadcrumb-item active">User</li>
+                            </ol>
+                            <div>
+                                <div style="display: flex; justify-content: space-between; align-items: center;">
+                                    <h5>Table User:
+                                    </h5>
+                                    <div>
+                                        <a href="/admin/create-user" class="btn btn-warning">create a new User</a>
+                                    </div>
+                                </div>
+                                <hr>
+                                <table class="table table-hover table-bordered">
+                                    <thead>
+                                        <th>Id</th>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>Address</th>
+                                        <th>Action</th>
+                                    </thead>
+                                    <tbody>
+                                        <% users.forEach( function (user) { %>
+                                            <tr>
+                                                <td>
+                                                    <%= user.id %>
+                                                </td>
+                                                <td>
+                                                    <%= user.fullName %>
+                                                </td>
+                                                <td>
+                                                    <%= user.username %>
+                                                </td>
+                                                <td>
+                                                    <%= user.address %>
+                                                </td>
+                                                <td>
+                                                    <div style="display: flex; gap: 10px;">
+                                                        <form action="/handle-view-user/<%= user.id %>" method="get">
+                                                            <button class="btn btn-warning">View</button>
+                                                        </form>
+                                                        <form action="/handle-delete-user/<%= user.id %>" method="post">
+                                                            <button class="btn btn-danger">Delete</button>
+                                                        </form>
+                                                    </div>
+                                                </td>
+
+                                            </tr>
+                                            <% }) %>
+
+                                    </tbody>
+
+                                </table>
+                            </div>
+                        </div>
+
                     </main>
                     <!-- Footer -->
                     <%- include('../layout/footer.ejs'); %>
@@ -31,13 +87,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
         <script src="/admin/js/scripts.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-            crossorigin="anonymous"></script>
-        <script src="/admin/assets/demo/chart-area-demo.js"></script>
-        <script src="/admin/assets/demo/chart-bar-demo.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-            crossorigin="anonymous"></script>
-        <script src="/admin/js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
