--- a/src/views/admin/product/show.ejs
+++ b/src/views/admin/product/show.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Hỏi Dân IT - Dự án laptopshop" />
     <meta name="author" content="Hỏi Dân IT" />
-    <title>Manager Product - Hỏi Dân IT</title>
+    <title>Manager User - Hỏi Dân IT</title>
     <link href="/admin/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -27,8 +27,57 @@
                                 <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
                                 <li class="breadcrumb-item active">Product</li>
                             </ol>
+                            <div>
+                                <div style="display: flex; justify-content: space-between; align-items: center;">
+                                    <h5>Table Product:
+                                    </h5>
+                                    <div>
+                                        <a href="/admin/create-product" class="btn btn-warning">create a new product</a>
+                                    </div>
+                                </div>
+                                <hr>
+                                <table class="table table-hover table-bordered">
+                                    <thead>
+                                        <th>Id</th>
+                                        <th>Name</th>
+                                        <th>Price</th>
+                                        <th>Factory</th>
+                                        <th>Action</th>
+                                    </thead>
+                                    <tbody>
+                                        <% products.forEach( function (product) { %>
+                                            <tr>
+                                                <td>
+                                                    <%= product.id %>
+                                                </td>
+                                                <td>
+                                                    <%= product.name %>
+                                                </td>
+                                                <td>
+                                                    <%= product.price %>
+                                                </td>
+                                                <td>
+                                                    <%= product.factory %>
+                                                </td>
+                                                <td>
+                                                    <div style="display: flex; gap: 10px;">
+                                                        <form action="/admin/view-product/<%= product.id %>" method="get">
+                                                            <button class="btn btn-warning">View</button>
+                                                        </form>
+                                                        <form action="/admin/delete-product/<%= product.id %>" method="post">
+                                                            <button class="btn btn-danger">Delete</button>
+                                                        </form>
+                                                    </div>
+                                                </td>
+
+                                            </tr>
+                                            <% }) %>
+                                    </tbody>
+
+                                </table>
+                            </div>
                         </div>
-                        <div>table Product</div>
+
                     </main>
                     <!-- Footer -->
                     <%- include('../layout/footer.ejs'); %>
