--- a/src/views/client/home/show.ejs
+++ b/src/views/client/home/show.ejs
@@ -92,28 +92,34 @@
                                                                 class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                                 <h4 style="font-size: 15px;">
                                                                     <a href="/product/<%= product.id%> ">
-                                                                        <%= product.name%>                                                                   
+                                                                        <%= product.name%>
                                                                     </a>
                                                                 </h4>
                                                                 <p style="font-size: 13px;">
                                                                     <%= product.shortDesc%>
                                                                 </p>
-                                                                <div class="d-flex flex-lg-wrap"></div>
-                                                                <p class="text-dark fs-5 fw-bold mb-3"
-                                                                    style="font-size: 15px; text-align: center; width: 100%;">
-                                                                    <%= new Intl.NumberFormat('vi-VN', {
-                                                                        style: 'currency' , currency: 'VND'
-                                                                        }).format(product.price) %>
+                                                                <div class="d-flex flex-lg-wrap justify-content-center">
+                                                                    <p class="text-dark fs-5 fw-bold mb-3"
+                                                                        style="font-size: 15px; text-align: center; width: 100%;">
+                                                                        <%= new Intl.NumberFormat('vi-VN', {
+                                                                            style: 'currency' , currency: 'VND'
+                                                                            }).format(product.price) %>
 
-                                                                </p>
-                                                                <a href="#"
-                                                                    class="mx-auto btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                                        class="fa fa-shopping-bag me-2 text-primary"></i>
-                                                                    Add to cart</a>
+                                                                    </p>
+                                                                    <form method="post"
+                                                                        action="/add-product-to-cart/<%= product.id %>">
+                                                                        <button
+                                                                            class="mx-auto btn border border-secondary rounded-pill px-3 text-primary">
+                                                                            <i
+                                                                                class="fa fa-shopping-bag me-2 text-primary"></i>
+                                                                            Add to cart
+                                                                        </button>
+                                                                    </form>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                <% }) %>
+                                                    <% }) %>
                                             </div>
 
 
