--- a/src/views/client/home/show.ejs
+++ b/src/views/client/home/show.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LaptopShop</title>
+    <title>LaptopShop
+    </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
