--- a/src/views/client/product/detail.ejs
+++ b/src/views/client/product/detail.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        <%= products.name %> - Laptop
+        <%= product.name %>- Laptopshop
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
@@ -33,7 +33,7 @@
     <link href="/client/css/style.css" rel="stylesheet">
 </head>
 
-<body>/client/
+<body>
 
     <!-- Spinner Start -->
     <div id="spinner"
@@ -42,35 +42,43 @@
     </div>
     <!-- Spinner End -->
 
-
     <!-- Navbar start -->
-    <%- include('../layout/header.ejs'); %>
+    <%- include('../layout/header'); -%>
         <!-- Navbar End -->
-
+        <div class="py-5"></div>
         <!-- Single Product Start -->
         <div class="container-fluid py-5 mt-5">
             <div class="container py-5">
+                <div class="mb-3">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Chi Tiết Sản Phẩm</li>
+                        </ol>
+                    </nav>
+                </div>
+
                 <div class="row g-4 mb-5">
                     <div class="col-lg-8 col-xl-9">
                         <div class="row g-4">
                             <div class="col-lg-6">
                                 <div class="border rounded">
                                     <a href="#">
-                                        <img src="/images/product/<%= products.image %> " class="img-fluid rounded"
+                                        <img src="/images/product/<%= product.image %>" class="img-fluid rounded"
                                             alt="Image">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <h4 class="fw-bold mb-3">
-                                    <%= products.name %>
+                                    <%= product.name %>
                                 </h4>
                                 <p class="mb-3">
-                                    <%= products.shortDesc %>
+                                    <%= product.shortDesc %>
                                 </p>
                                 <h5 class="fw-bold mb-3">
                                     <%= new Intl.NumberFormat('vi-VN', { style: 'currency' , currency: 'VND'
-                                        }).format(products.price) %>
+                                        }).format(product.price) %>
                                 </h5>
                                 <div class="d-flex mb-4">
                                     <i class="fa fa-star text-secondary"></i>
@@ -79,6 +87,8 @@
                                     <i class="fa fa-star text-secondary"></i>
                                     <i class="fa fa-star text-secondary"></i>
                                 </div>
+
+
                                 <div class="input-group quantity mb-5" style="width: 100px;">
                                     <div class="input-group-btn">
                                         <button class="btn btn-sm btn-minus rounded-circle bg-light border">
@@ -110,22 +120,18 @@
                                     <div class="tab-pane active" id="nav-about" role="tabpanel"
                                         aria-labelledby="nav-about-tab">
                                         <p>
-                                            <%= products.detailDesc %>
+                                            <%= product.detailDesc %>
                                         </p>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="col-lg-4 col-xl-3">
                         <div class="row g-4 fruite">
                             <div class="col-lg-12">
-                                <div class="input-group w-100 mx-auto d-flex mb-4">
-                                    <input type="search" class="form-control p-3" placeholder="keywords"
-                                        aria-describedby="search-icon-1">
-                                    <span id="search-icon-1" class="input-group-text p-3"><i
-                                            class="fa fa-search"></i></span>
-                                </div>
+
                                 <div class="mb-4">
                                     <h4>Categories</h4>
                                     <ul class="list-unstyled fruite-categorie">
@@ -165,14 +171,13 @@
                         </div>
                     </div>
                 </div>
+
             </div>
-        </div>
         </div>
         <!-- Single Product End -->
 
-
         <!-- Footer Start -->
-        <%- include('../layout/footer.ejs'); %>
+        <%- include('../layout/footer'); -%>
             <!-- Footer End -->
 
             <!-- Back to Top -->
