--- a/src/views/admin/order/detail.ejs
+++ b/src/views/admin/order/detail.ejs
@@ -58,7 +58,8 @@
                   <tr>
                     <th scope="row">
                       <div class="d-flex align-items-center">
-                        <img class="img-fluid me-5 rounded-circle"
+                        <img
+                          class="img-fluid me-5 rounded-circle"
                           src="/images/product/<%= OrderDetail.product.image %>"
                           alt="Product Image"
                           style="width: 80px; height: 80px"
