--- a/src/views/client/product/cart.ejs
+++ b/src/views/client/product/cart.ejs
@@ -201,6 +201,7 @@
 
               <form action="/handle-cart-to-checkout" method="post">
                 <div style="display: none">
+                  <input name="cartId" value="<%= cartId %>" />
                   <% cartDetails.forEach( function (cartDetail, index) { %>
                   <div class="mb-3">
                     <div class="form-group">
