--- a/src/views/admin/user/show.ejs
+++ b/src/views/admin/user/show.ejs
@@ -1,92 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="description" content="Hỏi Dân IT - Dự án laptopshop" />
     <meta name="author" content="Hỏi Dân IT" />
     <title>Manager User - Hỏi Dân IT</title>
     <link href="/admin/css/styles.css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body class="sb-nav-fixed">
-
+  <body class="sb-nav-fixed">
     <!-- header -->
     <%- include('../layout/header.ejs'); %>
-        <div id="layoutSidenav">
-            <!-- Sidenav -->
-            <%- include('../layout/sidenav.ejs'); %>
-                <div id="layoutSidenav_content">
-                    <main>
-                        <div class="container-fluid px-4">
-                            <h1 class="mt-4">Manager User</h1>
-                            <ol class="breadcrumb mb-4">
-                                <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
-                                <li class="breadcrumb-item active">User</li>
-                            </ol>
-                            <div>
-                                <div style="display: flex; justify-content: space-between; align-items: center;">
-                                    <h5>Table User:
-                                    </h5>
-                                    <div>
-                                        <a href="/admin/create-user" class="btn btn-warning">create a new User</a>
-                                    </div>
-                                </div>
-                                <hr>
-                                <table class="table table-hover table-bordered">
-                                    <thead>
-                                        <th>Id</th>
-                                        <th>Name</th>
-                                        <th>Email</th>
-                                        <th>Address</th>
-                                        <th>Action</th>
-                                    </thead>
-                                    <tbody>
-                                        <% users.forEach( function (user) { %>
-                                            <tr>
-                                                <td>
-                                                    <%= user.id %>
-                                                </td>
-                                                <td>
-                                                    <%= user.fullName %>
-                                                </td>
-                                                <td>
-                                                    <%= user.username %>
-                                                </td>
-                                                <td>
-                                                    <%= user.address %>
-                                                </td>
-                                                <td>
-                                                    <div style="display: flex; gap: 10px;">
-                                                        <form action="/admin/view-user/<%= user.id %>" method="get">
-                                                            <button class="btn btn-warning">View</button>
-                                                        </form>
-                                                        <form action="/admin/delete-user/<%= user.id %>" method="post">
-                                                            <button class="btn btn-danger">Delete</button>
-                                                        </form>
-                                                    </div>
-                                                </td>
-
-                                            </tr>
-                                            <% }) %>
-
-                                    </tbody>
-
-                                </table>
-                            </div>
-                        </div>
-
-                    </main>
-                    <!-- Footer -->
-                    <%- include('../layout/footer.ejs'); %>
+    <div id="layoutSidenav">
+      <!-- Sidenav -->
+      <%- include('../layout/sidenav.ejs'); %>
+      <div id="layoutSidenav_content">
+        <main>
+          <div class="container-fluid px-4">
+            <h1 class="mt-4">Manager User</h1>
+            <ol class="breadcrumb mb-4">
+              <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
+              <li class="breadcrumb-item active">User</li>
+            </ol>
+            <div>
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                "
+              >
+                <h5>Table User:</h5>
+                <div>
+                  <a href="/admin/create-user" class="btn btn-warning"
+                    >create a new User</a
+                  >
                 </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            crossorigin="anonymous"></script>
-        <script src="/admin/js/scripts.js"></script>
-</body>
-
+              </div>
+              <hr />
+              <table class="table table-hover table-bordered">
+                <thead>
+                  <th>Id</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Address</th>
+                  <th>Action</th>
+                </thead>
+                <tbody>
+                  <% users.forEach( function (user) { %>
+                  <tr>
+                    <td><%= user.id %></td>
+                    <td><%= user.fullName %></td>
+                    <td><%= user.username %></td>
+                    <td><%= user.address %></td>
+                    <td>
+                      <div style="display: flex; gap: 10px">
+                        <form
+                          action="/admin/view-user/<%= user.id %>"
+                          method="get"
+                        >
+                          <button class="btn btn-warning">View</button>
+                        </form>
+                        <form
+                          action="/admin/delete-user/<%= user.id %>"
+                          method="post"
+                        >
+                          <button class="btn btn-danger">Delete</button>
+                        </form>
+                      </div>
+                    </td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+              <nav aria-label="Page navigation example" >
+                <ul class="pagination justify-content-center">
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="/admin/user?page=1">1</a></li>
+                  <li class="page-item"><a class="page-link" href="/admin/user?page=2">2</a></li>
+                  <li class="page-item"><a class="page-link" href="/admin/user?page=3">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </main>
+        <!-- Footer -->
+        <%- include('../layout/footer.ejs'); %>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/admin/js/scripts.js"></script>
+  </body>
 </html>
