--- a/src/views/admin/user/show.ejs
+++ b/src/views/admin/user/show.ejs
@@ -82,18 +82,33 @@
                   <% }) %>
                 </tbody>
               </table>
-              <nav aria-label="Page navigation example" >
+              <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                   <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
+                    <a
+                      class="<%= page == 1 ? 'disabled page-link' : 'page-link' %>"
+                      href="/admin/user?page=<%= page - 1 %>"
+                      aria-label="Previous"
+                    >
                       <span aria-hidden="true">&laquo;</span>
                     </a>
                   </li>
-                  <li class="page-item"><a class="page-link" href="/admin/user?page=1">1</a></li>
-                  <li class="page-item"><a class="page-link" href="/admin/user?page=2">2</a></li>
-                  <li class="page-item"><a class="page-link" href="/admin/user?page=3">3</a></li>
+                  <% for(var i=1; i<= totalUsersPage; i++) { %>
                   <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
+                    <a
+                      class="<%= page == i ? 'active page-link' : 'page-link' %>"
+                      href="/admin/user?page=<%= i %>"
+                    >
+                      <%= i %>
+                    </a>
+                  </li>
+                  <% } %>
+                  <li class="page-item">
+                    <a
+                      class="<%= page == totalUsersPage ? 'disabled page-link' : 'page-link' %>"
+                      href="/admin/user?page=<%= page + 1 %>"
+                      aria-label="Next"
+                    >
                       <span aria-hidden="true">&raquo;</span>
                     </a>
                   </li>
